--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             width: 200px;
             height: 200px;
 
-            background-image: url('https://pngimg.com/uploads/envelope/envelope_PNG18366.png');
+            background-image: href ="./yoohoo.gif";
             background-size: cover;
             background-position: center;
 
