--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             width: 200px;
             height: 200px;
 
-            background-image: <link rel="icon" type="image/gif" href="yoohoo.gif"> ;
+            background-image: url("yoohoo.gif");
             background-size: cover;
             background-position: center;
 
