--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             width: 200px;
             height: 200px;
 
-            background-image: url("./yoohoo.gif");
+            background-image: url("https://dq.twojh.com/media/img.gif");
             background-size: cover;
             background-position: center;
 
@@ -60,7 +60,7 @@
             width: 200px;
             height: 200px;
 
-            background-image: url('https://photos.app.goo.gl/biSGEUsJMskFwKvE9');
+            background-image: url('./yoohoo.gif');
             background-size: cover;
             background-position: center;
 
