--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
 
         body {
-            background-color: #E1BEE7;
+            background-color: #9b070f;
         }
 
         .envelope {
@@ -32,7 +32,7 @@
             width: 200px;
             height: 200px;
 
-            background-image: url("https://dq.twojh.com/media/img.gif");
+            background-image: url("https://pngimg.com/uploads/envelope/envelope_PNG18366.png");
             background-size: cover;
             background-position: center;
 
@@ -161,11 +161,12 @@
 
     <div class="letter-open">
         <div class="rtan" onclick="go_rtan()"></div>
-        <h1>쭈욘이가 보내는 메시지</h1>
+        <h1>🎄 Merry Christmas 🎄</h1>
         <div class="messagebox">
-            Merry Cristmas!! HaHaHa~~ <br />
+            메리 크리스마스 🎄⛄️ <br />
             몸도 마음도 따수운 크리스마스 보내세용 💕💕 <br />
-            <p class="from">이주욘</p>
+            (설마... 혼자(😁) 보내는 거 아니지..^^;;?) <br />
+            <p class="from">리주연😚</p>
         </div>
     </div>
 
